<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded_corners"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    
    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:src="@drawable/grapple"/>
    
    <LinearLayout
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="13dp">
        
        <ImageView
            android:id="@+id/station"
            android:layout_height="60dp"
            android:layout_marginBottom="7dp"
            android:layout_width="60dp"
            android:src="@drawable/utp"/>
        
        <TextView
            android:gravity="center"
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/title"
            android:textSize="17dp"
            android:textStyle="bold"/>
        
        <TextView
            android:gravity="center"
            android:id="@+id/artist"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/artist"
            android:textSize="13dp"/>
        
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">
        
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:paddingEnd="14dp"
            android:paddingStart="14dp">
            
            <TextView
                android:id="@+id/current"
                android:layout_alignParentStart="true"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/max"
                android:layout_width="wrap_content"
                android:text="@string/no_time"/>
            
            <TextView
                android:id="@+id/max"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/no_time"/>
            
        
        </RelativeLayout>
        
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
        
    
    </LinearLayout>
    
    <LinearLayout
        android:background="@drawable/button_surface"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="17dp"
        android:layout_width="wrap_content"
        android:padding="7dp">
        
        <LinearLayout
            android:background="@drawable/circle_button"
            android:id="@+id/stop"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:padding="3dp">
            
            <ImageView
                android:layout_height="33dp"
                android:layout_width="33dp"
                android:src="@drawable/stop_circle"/>
            
        
        </LinearLayout>
        
        <LinearLayout
            android:background="@drawable/circle_button"
            android:id="@+id/play"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:padding="3dp">
            
            <ImageView
                android:layout_height="33dp"
                android:layout_width="33dp"
                android:src="@drawable/play_circle"/>
            
        
        </LinearLayout>
        
        <LinearLayout
            android:background="@drawable/circle_button"
            android:id="@+id/cancel"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:padding="3dp">
            
            <ImageView
                android:layout_height="33dp"
                android:layout_width="33dp"
                android:src="@drawable/cancel_circle"/>
            
        
        </LinearLayout>
        
    
    </LinearLayout>
    

</LinearLayout>